--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="main_actionbar" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
